# extensible-encrypter-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  cliff.toml  deny.toml  typos.toml
.github/workflows/: ci.yml  doc.yml
examples/encrypt/: Cargo.toml
examples/encrypt/src/: main.rs
src/: aes.rs  decrypter.rs  encrypter.rs  encrypter_internal.rs  error.rs  hasher.rs  lib.rs  prelude.rs
src/decrypter/: aes256_gcm_siv.rs  builder.rs
src/encrypter/: aes256_gcm_siv.rs
src/hasher/: pbkdf2.rs
