[package]
name = "pbkdf-encrypt-core"
version = "0.1.0"
authors = ["SolidSnakeEater"]
edition = "2021"
publish = false

[dependencies]
# AES - Upgrading causes breakage
aes = { version = "^0.8" }
aes-gcm-siv = { version = "^0.11" }

hex = "^0.4"
hmac = "0.13.0-pre.4"
pbkdf2 = { version = "0.13.0-pre.1" }
sha2 = { version = "0.11.0-pre.4" }
thiserror = "^2.0"

# Logging support
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

[dev-dependencies]
hex-literal = "^0.4"
prettytable-rs = "0.10.0"
