[package]
name = "extensible_encrypter"
version = "0.1.0"
authors = ["Michael de Silva <michael@crustyengineer.com>"]
repository = "https://github.com/bsodmike/extensible-encrypter-rs"
license = "MIT OR Apache-2.0"
description = "Extensible API for symmetric key encryption"
readme = "README.md"
edition = "2021"
publish = false
rust-version = "1.84.1"

[dependencies]
# AES - Upgrading causes breakage
aes = { version = "^0.8" }
aes-gcm-siv = { version = "^0.11" }

base64 = "0.22.1"
hex = "^0.4"
hmac = "0.13.0-pre.4"
pbkdf2 = { version = "0.13.0-rc.0", features = ["simple"] }
sha2 = { version = "0.11.0-pre.4" }
thiserror = "^2.0"

# Logging support
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

[dev-dependencies]
hex-literal = "^1.0"
prettytable-rs = "0.10.0"
tracing-test = "0.2.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
lto = true
codegen-units = 1
